# checkers-bot

./: .gitignore  Cargo.toml  pyproject.toml
model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/variables/: variables.data-00000-of-00001  variables.index
py/: .python-version  controller.py  game.py  gui.py  main.py  modelFit.py  requirements.txt  saveModefForRust.py  startGame.py
py/models/: model10.keras  model100.keras  model11.keras  model110.keras  model12.keras  model120.keras  model13.keras  model130.keras  model14.keras  model140.keras  model15.keras  model150.keras  model16.keras  model160.keras  model17.keras  model170.keras  model18.keras  model180.keras  model19.keras  model190.keras  model2.keras  model20.keras  model200.keras  model21.keras  model210.keras  model22.keras  model220.keras  model23.keras  model230.keras  model24.keras  model240.keras  model25.keras  model250.keras  model26.keras  model260.keras  model27.keras  model270.keras  model28.keras  model280.keras  model29.keras  (+35 more)
src/: board.rs  checker.rs  controller.rs  game_object.rs  gui.rs  lib.rs  main.rs  py_wrapper.rs
src/game/: board.rs  checker.rs  game_object.rs
